--- a/src/components/weather-widget/WeatherWidget.css
+++ b/src/components/weather-widget/WeatherWidget.css
@@ -26,6 +26,14 @@
     top: 15px;
 }
 
+.weather-icon-small {
+    position: absolute;
+    height: 100%;
+    left: 18%;
+    top: 0%;
+    width: auto;
+}
+
 .city {
     padding-left: 5%;
     padding-top: 3%;
@@ -74,6 +82,7 @@
 }
 
 .five-day-forecast li {
+    position: relative;
     margin-left: -40px;
     padding-top: 2%;
     padding-left: 5%;
@@ -89,15 +98,26 @@
     background-color: #BDBDBD;
 }
 
-.forecast-icon {
-    height: 100%;
+.forecast-date {
+    position: absolute;
+    top: 25%;
 }
 
 .forecast-description {
-    margin-left: 8px;
+    position: absolute;
+    left: calc(25% + 20px);
+    top: 25%;
 }
 
 .forecast-temperatures {
     position: absolute;
+    top: 25%;
     right: 10px;
+}
+
+.moon-icon {
+    top: -33%;
+    left: 15%;
+    height: 175%;
+    width: auto;
 }
